--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <nav>
-        <i></i>&nbsp;<a href="/" title="Home">Home</a> &nbsp;|
-        <i></i>&nbsp;<a href="/blog.html" title="Articles">Articles</a>  &nbsp;|
-        <i></i>&nbsp;<a href="/projects.html" title="Projects">Projects</a>  &nbsp;|
-        <i></i>&nbsp;<a href="/about.html" title="About me">About</a>  &nbsp;|
-        <i></i>&nbsp;<a href="/support.html" title="Support" rel="nofollow">Support/Contact</a>  &nbsp;|
+        <i></i>&nbsp;<a href="/" title="Home">Home</a> &nbsp;/
+        <i></i>&nbsp;<a href="/blog.html" title="Articles">Articles</a>  &nbsp;/
+        <i></i>&nbsp;<a href="/projects.html" title="Projects">Projects</a>  &nbsp;/
+        <i></i>&nbsp;<a href="/about.html" title="About me">About</a>  &nbsp;/
+        <i></i>&nbsp;<a href="/support.html" title="Contact" rel="nofollow">Contact</a>  &nbsp;
     </nav>
 </header>
