--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-	<p>Copyright &copy; 2008-2012 <a href="/about.html">Marco Dinacci</a>. <a href="/copyright.html">Some rights reserved.</a></p>
+	<p id="copyright">Copyright &copy; 2008-2012 <a href="/about.html">Marco Dinacci</a>. <a href="/copyright.html">Some rights reserved.</a></p>
 </footer>
