--- a/_less/screen.less
+++ b/_less/screen.less
@@ -94,6 +94,11 @@ div.projects > p {
     padding-bottom:20px;
 }
 
+#media_links {
+    float:right;
+    margin-right:0px;
+}
+
 #sitename {
     float:right;
     color:#333;
