--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,5 +5,6 @@
         <i></i>&nbsp;<a href="/projects.html" title="Projects">Projects</a>  &nbsp;/
         <i></i>&nbsp;<a href="/about.html" title="About me">About</a>  &nbsp;/
         <i></i>&nbsp;<a href="/support.html" title="Contact" rel="nofollow">Contact</a>  &nbsp;
+        <span id="media_links"><a href="{{ site.feed }}"><img src="/img/icons/rss_icon.png"/></a></span>
     </nav>
 </header>
