--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="en" lang="en">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1,
-        maximum-scale=1, user-scalable=0" />
         <meta http-equiv="content-language" content="en" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, 
+        maximum-scale=1, user-scalable=1" />
         <title>
             {% if page.title %}
             {{ page.title }} //
@@ -17,7 +17,7 @@
         <meta name="description" content="{{ page.summary }}" />
         {% endif %}
         <link href='http://fonts.googleapis.com/css?family=Cantarell&subset=latin' rel='stylesheet' type='text/css'>
-        <link href="http://feeds.feedburner.com/{{site.feedburner.id}}" rel="alternate"
+        <link href="http://feeds.feedburner.com/{{site.feed}}" rel="alternate"
         title="{{ site.title }}" type="application/rss2" />
         <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
         <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen, projection" />
