--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
 <footer>
-	<p id="copyright">Copyright &copy; 2008-2012 <a href="/about.html">Marco Dinacci</a>. <a href="/copyright.html">Some rights reserved.</a></p>
+<p id="copyright">Copyright &copy; 2008-2012 <a href="/about.html">Marco Dinacci</a>. <a href="/copyright.html">Some rights reserved.</a>
+    <a href="//plus.google.com/112981284665807000344?prsrc=3" rel="me" style="text-decoration:none;visibility:hidden">
+        <img src="//ssl.gstatic.com/images/icons/gplus-16.png" alt="Google+" style="border:0;width:16px;height:16px;text-align:center"/>
+    </a>
+</p>
 </footer>
