--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,5 +34,8 @@
 
             {% include footer.html %}
             <script type="text/javascript" src="/js/main.js"></script>
+
+            <!-- Bitcoinate -->
+            <script src="https://raw.github.com/adius/bitcoinate/v0.1.2/bitcoinate.min.js"></script>
     </body>
 </html>
