--- a/_less/screen.less
+++ b/_less/screen.less
@@ -48,12 +48,12 @@ body {
 }
 
 a {
-    color: #26a;
+    color: #4682b4;
     text-decoration: none;
 }
 
 a:hover {
-    color: #0e4071;
+    color: #87ceeb;
 }
 
 h1 {
