Added a link rel author in every page, let's see if google now will finally show my avatar in search results...

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <i></i>&nbsp;<a href="/" title="Home">Home</a> &nbsp;/
         <i></i>&nbsp;<a href="/blog.html" title="Articles">Articles</a>  &nbsp;/
         <i></i>&nbsp;<a href="/projects.html" title="Projects">Projects</a>  &nbsp;/
-        <i></i>&nbsp;<a href="/about.html" title="About me" rel="author">About</a>  &nbsp;/
+        <i></i>&nbsp;<a href="http://www.intransitione.com/about.html" title="About me" rel="author">About</a>  &nbsp;/
         <i></i>&nbsp;<a href="/support.html" title="Contact" rel="nofollow">Contact</a>  &nbsp;
         <span id="media_links">
             <a href="{{ site.feed }}"><img src="/img/icons/rss_icon.png"/></a>
