Added disclaimer message to take java to app store blog post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,14 @@
         {% if page.summary %}
         <meta name="description" content="{{ page.summary }}" />
         {% endif %}
+
+        <link rel="dns-prefetch" href="//fonts.googleapis.com">
+        <link rel="dns-prefetch" href="//google-analytics.com">
+        <link rel="dns-prefetch" href="//www.google-analytics.com">
+        <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
+        <link rel="dns-prefetch" href="//intransitionecom.disqus.com">
+        <link rel="dns-prefetch" href="//platform.twitter.com">
+
         <link href='http://fonts.googleapis.com/css?family=Cantarell&subset=latin' rel='stylesheet' type='text/css'>
         <link href="http://feeds.feedburner.com/{{site.feed}}" rel="alternate"
         title="{{ site.title }}" type="application/rss2" />
