--- a/_less/screen.less
+++ b/_less/screen.less
@@ -394,6 +394,32 @@ a.dsq-brlink {
     font-size: 13px !important;
 }
 
+/* Quick hacks ... */
+
+.rightimagenoborder {
+    border:0px;
+    float:right;
+    padding-left:15px;
+    padding-top:10px;
+    padding-bottom:10px;
+}
+
+.leftimagenoborder {
+    border:0px;
+    float:left;
+    padding-right:15px;
+    padding-top:10px;
+    padding-bottom:10px;
+}
+
+/* Brutal syntax hacks to revert text and background colors */
+.highlight {background-color:white;}
+.highlight .n {color:black;}
+.highlight .nb {color:black;}
+.highlight .o {color:gray;}
+.highlight .p {color:navy;}
+.highlight .mi {color:red;}
+
 @import "mobile.less";
 @import "syntax.css";
 @import "mdpopup.css";
